# marketmind-fixed122

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  TRANSFORMATION_STRATEGY.md  VERCEL_DEPLOY_TRIGGER.txt  build-log-utf8.txt  build-log.txt  metadata.json  migrate-lib.js  migrate.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  temp-fix.js  ts-log-utf8.txt  ts-log.txt  ts-log2-utf8.txt  ts-log2.txt  ts-log3-utf8.txt  ts-log3.txt  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
components/: CommandPalette.tsx  EconomicCalendarList.tsx  LayoutWrapper.tsx  MiniChart.tsx  Navbar.tsx  NewsFeed.tsx  NewsReader.tsx  NotificationToast.tsx  SettingsModal.tsx  Sidebar.tsx  TradingChart.tsx  TradingViewChart.tsx  Widget.tsx
context/: SettingsContext.tsx
docs/: BLOOMBERG_CLASS_ROADMAP.md  DATA_ARCHITECTURE.md  MarketMind-Terminal-OS-Complete-Guide.md  MarketMind-Terminal-User-Guide.html  TERMINAL_CONSTITUTION.md  terminal-contracts.md
hooks/: use-tauri-updater.ts
lib/: ai-utils.ts  alerts.ts  analyzeEvent.ts  audit.ts  backtest.ts  date-utils.ts  entitlements.ts  event-intelligence.test.ts  event-intelligence.ts  format.ts  instruments.ts  macro-intelligence.ts  market-intelligence.ts  tauri.ts  tech-math.ts  trade-setup-math.ts  types.ts  utils.ts
scripts/: add-density-imports.cjs  bootstrap-opensearch-index.ts  capture-dashboard-by-command.mjs  capture-dashboard-missing-targets.mjs  capture-dashboard-submenus.mjs  capture-dashboard-via-dom-click.mjs  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+831 files in other folders)
