[package]
name = "marketmind"
version = "0.1.0"
description = "Institutional Intelligence Terminal"
authors = ["MarketMind Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.5", features = ["window-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]