[package]
name = "marketmind"
version = "0.1.0"
description = "Institutional Intelligence Terminal"
authors = ["MarketMind Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0" }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"